--- a/mongodb.yml
+++ b/mongodb.yml
@@ -1,6 +1,5 @@
 - name: Configure mongodb component
   hosts: mongodb 
   become: yes 
-  role: #This will automatically load a folder called roles in current working directory 
+  roles: #This will automatically load a folder called roles in current working directory 
     - mongodb
-    
