--- a/main.yml
+++ b/main.yml
@@ -1,5 +1,5 @@
-- name: Configure {{ component }}
-  hosts:  {{ component }}
+- name: Configure "{{ component }}""
+  hosts:  "{{ component }}"
   become: yes 
   roles: #This will automatically load a folder called roles in current working directory 
-    - {{ component }}
+    - "{{ component }}"
