--- a/main.yml
+++ b/main.yml
@@ -1,4 +1,4 @@
-- name: Configure "{{ component }}""
+- name: Configure {{ component }}
   hosts:  "{{ component }}"
   become: yes 
   roles: #This will automatically load a folder called roles in current working directory 
