--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -45,8 +45,6 @@
     template:
       src: nginx.conf.j2
       dest: /etc/nginx/nginx.conf
+      notify: 
+        - restart nginx 
   
-  - name: restart nginx 
-    service: 
-      name: nginx
-      state: restarted
