--- a/roles/common/tasks/app-setup.yml
+++ b/roles/common/tasks/app-setup.yml
@@ -10,14 +10,14 @@
     path: /app 
     state: directory
 
-- name: Download the catalogue code 
+- name: "Download the {{ component }} code"
   get_url:
-    url: https://roboshop-artifacts.s3.amazonaws.com/catalogue-v3.zip 
-    dest: /tmp/catalogue.zip
+    url: "https://roboshop-artifacts.s3.amazonaws.com/{{ component }}.zip"
+    dest: "/tmp/{{ component }}.zip"
   
 # This module thinks file exist on ansible control server, need to extract on to remote machine 
-- name: Extract catalogue code 
+- name: Extract {{ component }} code 
   unarchive:
-    src: /tmp/catalogue.zip
+    src: "/tmp/{{ component }}.zip"
     dest: /app
     remote_src: yes  # File already exist in catalogue server 
