--- a/roles/frontend/vars/main.yml
+++ b/roles/frontend/vars/main.yml
@@ -1,3 +1,3 @@
-CATALOGUE_HOST: catalogue.daws84s.site
+CATALOGUE_HOST: catalogue.daws84s.cloud
 USER_HOST: user.daws84s.cloud
 CART_HOST: cart.daws84s.cloud
