ansible-roboshop-roles

--- a/roles/frontend/vars/main.yml
+++ b/roles/frontend/vars/main.yml
@@ -1,3 +1,4 @@
 CATALOGUE_HOST: catalogue.daws84s.cloud
 USER_HOST: user.daws84s.cloud
 CART_HOST: cart.daws84s.cloud
+SHIPPING_HOST: shipping.daws84s.cloud
