--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -9,5 +9,13 @@
     state: started 
     enabled: yes 
 
+- name: install boto3 and botocore
+  ansible.builtin.pip:
+    name: "{{ item }}"
+    executable: pip3.9
+  loop:
+  - boto3
+  - botocore
+
 - name: Setup root password 
   command: mysql_secure_installation --set-root-pass RoboShop@1
