--- a/roles/shipping/tasks/main.yml
+++ b/roles/shipping/tasks/main.yml
@@ -8,6 +8,11 @@
     name: common
     tasks_from: maven-setup
 
+- name: Shipping service setup
+  include_role:
+    name: common
+    tasks_from: systemd
+
 - name: install mysql 
   dnf:
     name: mysql
