--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -18,4 +18,4 @@
   - botocore
 
 - name: Setup root password 
-  command: mysql_secure_installation --set-root-pass RoboShop@1
+  command: mysql_secure_installation --set-root-pass "{{ MYSQL_ROOT_PASSWORD }}""
