--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -10,4 +10,4 @@
     enabled: yes 
 
 - name: Setup root password 
-  command: mysql_secure_installation --set-root-pass "{{ MYSQL_ROOT_PASSWORD }}"
+  command: mysql_secure_installation --set-root-pass {{ MYSQL_ROOT_PASSWORD }}
