--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: appsetup 
   include_role:
     name: common
-    tasks_from: appetup
+    tasks_from: app-setup
 
 - name: nodejs setup
   include_role:
