--- a/roles/payment/tasks/main.yml
+++ b/roles/payment/tasks/main.yml
@@ -1,36 +1,14 @@
-- name: install python3 packages
-  dnf: 
-    name: "{{ item }}"
-    state: installed 
-  loop:
-    - python3 
-    - gcc 
-    - python3-devel 
-
 - name: App setup for payment 
   include_role: 
     name: common
     tasks_from: app-setup
 
-- name: install dependencies
-  ansible.builtin.pip:
-    requirements: requirements.txt
-    executable: pip3.9
-  args:
-    chdir: /app
+- name: Python setup for payment 
+  include_role: 
+    name: common
+    tasks_from: python-setup
 
-- name: Copy payment Service 
-  copy:
-    src: payment.service
-    dest: /etc/systemd/system/payment.service
-
-- name: daemon reload 
-  systemd_service:
-    daemon_reload: true
-
-- name: Start the payment service
-  service:
-    name: payment 
-    state: started 
-    enabled: yes 
-
+- name: System setup for payment 
+  include_role: 
+    name: common
+    tasks_from: systemd
