--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -29,6 +29,7 @@
 - name: load products
   ansible.builtin.shell: mongosh --host mongodb.daws84s.cloud < /app/db/master-data.js
   when: catalogue_output.stdout | int < 0
+  ignore_erros: true
 
 - name: Systemd Setup 
   include_role: 
