--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -21,10 +21,12 @@
 - name: check products loaded or not
   command: mongosh --host mongodb.daws84s.cloud --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
   register: catalogue_output
-
+  ignore_erros: true
+  
 - name: print catalogue output
   debug:
     msg: "{{ catalogue_output }}"
+  ignore_erros: true
 
 - name: load products
   ansible.builtin.shell: mongosh --host mongodb.daws84s.cloud < /app/db/master-data.js
