--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -26,7 +26,7 @@
 - name: print catalogue output
   debug:
     msg: "{{ catalogue_output }}"
-  ignore_erros: true
+  ignore_errors: true
 
 - name: load products
   ansible.builtin.shell: mongosh --host mongodb.daws84s.cloud < /app/db/master-data.js
