--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -22,16 +22,18 @@
   command: mongosh --host mongodb.daws84s.cloud --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
   register: catalogue_output
   ignore_errors: true
+  ignore_unreachable: true
 
 - name: print catalogue output
   debug:
     msg: "{{ catalogue_output }}"
-  ignore_errors: true
+
 
 - name: load products
   ansible.builtin.shell: mongosh --host mongodb.daws84s.cloud < /app/db/master-data.js
   when: catalogue_output.stdout | int < 0
   ignore_errors: true
+  ignore_unreachable: true
 
 - name: Systemd Setup 
   include_role: 
