--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -44,6 +44,6 @@
 - name: Deployment for catalogue
   tags: 
     - deployment
-  import_role: 
+  include_role: 
     name: common
     tasks_from: deployment
