ansible-roboshop-roles

--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -42,8 +42,8 @@
     tasks_from: systemd
 
 - name: Deployment for catalogue
-  # tags: 
-  #   - deployment
+  tags: 
+    - deployment
   include_role: 
     name: common
     tasks_from: deployment
