--- a/roles/common/tasks/deployment.yml
+++ b/roles/common/tasks/deployment.yml
@@ -1,4 +1,6 @@
 - name: Stop the service 
+  tags:
+    - deployment
   service: 
     name: "{{ component }}"
     state: stopped 
@@ -20,6 +22,8 @@
     remote_src: yes 
   
 - name: Install dependencies
+  tags:
+    - deployment
   community.general.npm: 
   path: /app
 
