--- a/mysql.yml
+++ b/mysql.yml
@@ -1,7 +1,7 @@
 - name: Configure {{ component }}
   hosts:  "{{ component }}"
   become: yes 
-  vars-files: 
+  vars_files: 
     - vault/mysql.yml
   roles: #This will automatically load a folder called roles in current working directory 
     - "{{ component }}"
