--- a/main.yml
+++ b/main.yml
@@ -1,6 +1,8 @@
 - name: Configure {{ component }}
-  hosts:  "{{ component }}"
-  become: yes 
+  #hosts:  "{{ component }}"
+  hosts: localhost
+  connection: local
+  become: yes
   roles: #This will automatically load a folder called roles in current working directory 
     - "{{ component }}"
   
