--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -41,9 +41,9 @@
     name: common
     tasks_from: systemd
 
-- name: Deployment for catalogue
-  tags: 
-    - deployment
-  import_role: 
-    name: common
-    tasks_from: deployment
+# - name: Deployment for catalogue
+#   tags: 
+#     - deployment
+#   import_role: 
+#     name: common
+#     tasks_from: deployment
